Darken 'correct' colour to ensure contrast matches accessibility guidelines

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -7,8 +7,8 @@ $match-color-hover: #3dcde624;
 $match-gray: #999999;
 $match-debug-color-dirty: #f7a85e66;
 $match-debug-color-inflight: #31a72085;
-$match-suggestion-background-color: #45ad39;
-$match-suggestion-background-color-hover: #3a9430;
+$match-suggestion-background-color: #228816;
+$match-suggestion-background-color-hover: #1e7014;
 $match-suggestion-color: #fff;
 $match-suggestion-color-hover: #fff;
 $match-suggestion-wiki-extract-height: 85px;
